...

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollviewfreecashflow">

            <!--<LinearLayout-->
...

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsCompanyNameInput"
                android:layout_width="89dp"
                android:layout_height="44dp"
...
                android:layout_marginEnd="8dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsBaseYearValue"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_marginEnd="168dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsNumberForecastPeriodsValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_marginEnd="109dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsBaseYearRevenueValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_marginTop="27dp"
                android:layout_marginEnd="44dp"
                android:text="0.00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsNumberForecastPeriodsValue" />
...

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsAnnualRevenueGrowthRateValue"
                android:layout_width="89dp"
                android:layout_height="44dp"
...
                    android:layout_marginEnd="64dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsInitialEBITValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsSGA" />
...
                android:layout_marginTop="32dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsCapitalExpenditureValue"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_marginEnd="47dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsStraightLineValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsOperatingNWC" />
...
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsBaseYearDepreciationValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsTaxRate" />
...

            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsTaxRateValue"
                android:layout_width="100dp"
                android:layout_height="50dp"
...

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
