...

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:layout_gravity="center"
            android:id="@+id/scrollviewcostofcapital">>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

...
            android:layout_width="93dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageCostOfCapitalCashValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageCostOfCapitalTitle" />

        <EditText
            android:id="@+id/WACCDetailedPageCostOfCapitalCashValue"
...
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="136dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageCostOfCapitalDebtValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageCostOfCapitalCash" />

    <EditText
        android:id="@+id/WACCDetailedPageCostOfCapitalDebtValue"
...
            android:layout_width="113dp"
            android:layout_height="65dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="136dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageCostOfCapitalMarketCapValue"
            app:layout_constraintHorizontal_bias="0.612"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageCostOfCapitalDebt" />

        <TextView
            android:id="@+id/WACCDetailedPageCostOfCapitalEquityBeta"
...
            android:layout_width="88dp"
            android:layout_height="34dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="155dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageCostOfCapitalRiskFreeRateValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageCostOfCapitalEquityBeta" />

    <EditText
        android:id="@+id/WACCDetailedPageCostOfCapitalMarketCapValue"
        android:layout_width="89dp"
...
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="120dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageCostOfCapitalWeightedAverageCostOfCapitalValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageCostOfCapitalCostOfDebt" />

        <TextView
            android:id="@+id/WACCDetailedPageCostOfCapitalNumberOfShares"
            android:layout_width="111dp"
            android:layout_height="43dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="86dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageCostOfCapitalNumberOfSharesValue"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageCostOfCapitalWeightedAverageCostOfCapital" />


        <EditText
...
