...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageTerminalValueTerminalROICValue"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/WACCDetailedPageTerminalValueTerminalROICValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="52dp"
        android:text="0.00"
        app:layout_constraintBottom_toTopOf="@+id/WACCDetailedPageTerminalValueTerminalReinvestmentRateValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/WACCDetailedPageTerminalValueTerminalReinvestmentRate"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="88dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageTerminalValueTerminalGrowthRateValue"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageTerminalValueTerminalReinvestmentRate" />

    <TextView
        android:id="@+id/WACCDetailedPageTerminalValueTerminalWACC"
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/WACCDetailedPageTerminalValueTerminalWACCValue"
        app:layout_constraintTop_toBottomOf="@+id/WACCDetailedPageTerminalValueTerminalGrowthRate"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/WACCDetailedPageTerminalValueTerminalReinvestmentRateValue"
        android:layout_width="wrap_content"
...
